# tiny-llm

./: .gitignore  README.md  profile.html  profile.json  pyproject.toml  run_gcloud.sh
cs336_basics/: commons.py  model.py  optimizer.py  pretokenization.py  tokenizer.py  train.py
cs336_basics/preprocessing/: data.py  encode.py  tokenizer.py
rust/: Cargo.toml
rust/tokenizer/: .nvimlog  Cargo.toml
rust/tokenizer/src/: bpe.rs  commons.rs  lib.rs  tokenizer.rs
rust/tokenizer/src/bpe/: pair_graph.rs  pair_priority.rs  utils.rs
scripts/: merge.py  test.py
src/: model.py  optimizer.py  run_gcloud.sh  train.py
src/preprocessing/: data.py  encode.py  tokenizer.py
tests/: adapters.py
tests/fixtures/: corpus2.en
